# hope

./: .gitignore  Cargo.toml  README.md  globals.css  next.config.js  package.json  tsconfig.json  typings.d.ts
.github/workflows/: rust.yml
.next/: BUILD_ID  build-manifest.json  export-detail.json  images-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json
.next/cache/webpack/client-development/: 1.pack  11.pack  12.pack  13.pack  15.pack  17.pack  18.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  index.pack  index.pack.old
.next/cache/webpack/server-development/: 0.pack  10.pack  11.pack  12.pack  2.pack  3.pack  4.pack  5.pack  6.pack  8.pack  9.pack  index.pack  index.pack.old
.next/cache/webpack/server-production/: 0.pack  1.pack  2.pack  index.pack  index.pack.old
.next/server/: webpack-runtime.js
.next/server/chunks/: 734.js  869.js
.next/server/pages/: 404.html  500.html  _app.js  _document.js  _error.js
.next/static/4uuOIz-hVvLIZx-sTK-v8/: _buildManifest.js
.next/static/chunks/: 366-ed943087f2a2c46b49c0.js
.next/static/chunks/pages/: index-af7def66fbae7541104e.js
core/: Cargo.toml
core/src/: algorithm.rs  lib.rs  main.rs  parser.rs  pieces.rs  scripts.rs  token.rs  tokens.rs
core/src/value/: id.rs  structure.rs
docs/: 404.html  index.html
docs/_next/static/-780TM397EphnQtkOEb83/: _buildManifest.js
docs/_next/static/4SpDnA4O60kXJJEZNz9aA/: _buildManifest.js
docs/_next/static/5RmNGWVPr28NIFoZQjaz2/: _buildManifest.js
docs/_next/static/BYhRpOdxkNw6togx4iKA5/: _buildManifest.js
docs/_next/static/Fs2AWVNRsbQ9EDWrF4YF3/: _buildManifest.js
docs/_next/static/GiKPaXXiuPvA3CiSXW5T4/: _buildManifest.js
docs/_next/static/Gz5omcfqbFTjRAcSJwQbq/: _buildManifest.js
docs/_next/static/chunks/: 57.454bcef7f4eb28da.js  (+75 more)
hobot/: Cargo.toml
hobot/derive_matches/: Cargo.toml
hobot/derive_matches/src/: lib.rs
hobot/derive_of_type/: Cargo.toml
hobot/derive_of_type/src/: lib.rs
hobot/derive_syntax/: Cargo.toml
hobot/derive_syntax/src/: lib.rs
hobot/matches_macro/: Cargo.toml
hobot/matches_macro/src/: lib.rs
hobot/src/: builder.rs  error.rs  lib.rs  linker.rs  main.rs  parser.rs  token.rs  token_helpers.rs  token_impls.rs
hobot/src/token/: mod.rs  token_impl.rs  token_iter.rs
hobot/src/value/: datetime.rs  fact.rs  id.rs  list.rs  mod.rs  number.rs  seal.rs  structure.rs  text.rs  version.rs
pages/: _app.js  _document.js  index.tsx
src/: Script.tsx  algorithm.rs  config.ts  core_worker.ts  graph.tsx  hobot_worker.ts  main.rs  pieces.rs  script.rs  script_form.tsx  styles.ts  test_graph.ts  token.rs  token.tsx  tokens.rs  vocabulary.rs  worker.ts
src/components/: Graph.tsx  Script.tsx  Token.tsx
src/core/: error.rs  mod.rs
src/core/bot/: build.rs  command.rs  execute.rs  mod.rs  op_structure.rs  scan.rs  spec.rs  token.rs  translate.rs
src/core/data/: error.rs  mod.rs  random.rs
src/core/value/: fact.rs  id.rs  list.rs  mod.rs  number.rs  seal.rs  structure.rs  text.rs  time.rs  version.rs
src/pages/: _app.js  _document.js  index.tsx
src/value/: id.rs  mod.rs  number.rs  seal.rs  text.rs  time.rs  version.rs
(+128 files in other folders)
