[package]
name = "Hope"
description = "Human-oriented programming environment"
version = "0.0.1"
authors = ["Egor Dezhic <edezhic@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
iref = "1.4.3"
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
serde = { version = "1.0.123", features = ["derive"] }
unicode-normalization = "0.1.16"
unicode-segmentation = "1.7.1"
regex = "1.4.3"
derive_more = "0.99.11"

[dependencies.rust_decimal]
version = "1.10.1"
default-features = false
features = ["serde"]
