[package]
name = "hobot"
description = "Human-oriented bot"
version = "0.0.1"
authors = ["Egor Dezhic <edezhic@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_matches = { path = "./derive_matches"}
derive_of_type = { path = "./derive_of_type"}
derive_syntax = { path = "./derive_syntax"}
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
serde = { version = "1.0.130", features = ["derive"] }
unicode-normalization = "0.1.19"
unicode-segmentation = "1.8.0"
regex = "1.5.4"
derive_more = "0.99.16"
lazy_static = "1.4.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
itertools = "0.10.3"

[dependencies.rust_decimal]
version = "1.17.0"
default-features = false
features = ["serde"]

[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
]

[dependencies.petgraph]
version = "0.6.0"
default-features = false
features = ["serde-1", "stable_graph"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
